# ESP32_IDF_TestBundle

./: .gitignore  LICENSE  readme.md
helloworld/: sdkconfig  sdkconfig.old
idf_lvgl_eezstudio_esp32C3_t250706/: 0_fullclean.bash  0_set-target.bash  2_flash.bash  3_build_flash.bash  5_build_flash_monitor.bash  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
idf_lvgl_eezstudio_esp32C3_t250706/components/bsp/: CMakeLists.txt  bsp_buzzer.c  bsp_buzzer.h  bsp_gpio.c  bsp_gpio.h  bsp_i2c.c  bsp_i2c.h  bsp_key.c  bsp_key.h
idf_lvgl_eezstudio_esp32C3_t250706/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_demo_ui.c  lvgl_demo_ui.h  main.cpp
idf_lvgl_eezstudio_esp32C3_t250706/main/ui/: eez-flow.cpp  eez-flow.h  screens.c  screens.h  sync.ffs_db  ui.c  ui.h  vars.h
idf_oledAnimations_gif/: CMakeLists.txt  pngToBuffer.py
idf_oledAnimations_gif/main/: CMakeLists.txt  aniBuf.h  aniBuf.txt  main.c
idf_t1_led_toggle_breath/: CMakeLists.txt
idf_t1_led_toggle_breath/main/: CMakeLists.txt
idf_t1_lvgl_display/: CMakeLists.txt  sdkconfig  sdkconfig.old
idf_t1_lvgl_display/main/: CMakeLists.txt  idf_t1_lvgl_display.c  lv_port.c
idf_t250629_led/: CMakeLists.txt
idf_t250629_led/main/: CMakeLists.txt  t250629_led.c
idf_t250702_oled_menu_design_from0to1/: CMakeLists.txt  sdkconfig.defaults
idf_t250702_oled_menu_design_from0to1/main/: CMakeLists.txt  main.c
idf_t2_lcdST7789/: CMakeLists.txt
idf_t2_lcdST7789/main/: CMakeLists.txt
idf_t3_oled_basicII2/: CMakeLists.txt  sdkconfig
idf_t3_oled_basicII2/main/: CMakeLists.txt  main.c
(+21 files in other folders)
